05/07/2005
----------
1. fix the problem that option ldap_abook_container with null value
   in openwebmail.conf will be always overridden by option in
   openwebmail.conf.default
   (thanks to Luigi Mazzieri, lmazzieri.AT.emerenzio.net for his fix)
2. a. use mktmpdir to make temporary dir for non-automic tmp file creation
      to avoid race condition
   b. release the ruid/euid/egid www immediately after script start for
      better security
   (thanks to Matej Vela, vela.AT.debian.org for his suggestion)


05/06/2005
----------
1. fix the bug that addressbook import lets user upload any kind of file
   (thanks to Alex Teslik, alex.AT.acatysmoof.com for his fix)
2. fix the bug that addressbook import can would fail if the FullName
   field is choosed
   (thanks to Joao S Veiga, openwebmail.AT.rf.com.br for his fix)
3. move the popup calendar stylesheets into the templates/COMMON files
   and out of the templates/$lang files
   (thanks to Alex Teslik, alex.AT.acatysmoof.com for his code)
4. more strict check on dictionary parameter in openwebmail-abook.pl
   (thanks to Matej Vela, vela.AT.debian.org for his fix)
5. new iconset: Cool3D.Polish
   (thanks to Tomasz Wieckowski, t.wieckowski.AT.amp.edu.pl)


05/04/2005
----------
1. replace more open(F, fname) statement with sysopen(F, fname, mode)
   to avoid possible shell escape char in filename
2. fix a typo error in spellcheck which was introduced by 20050430 fix 3
3. use mktmpfile to create tmp file to avoid possible race condition
   (suggested by Javier Fernandez-Sanguino Pena, jfs.AT.computer.org)
4. remove dnagerous chars from the dictionary parameter in spellcheck
   (suggested by Matej Vela, vela.AT.debian.org)
5. fix the several typo error in LDAP config name in openwebmail-abook.pl
   (thanks to Alex Teslik, alex.AT.acatysmoof.com for his fix)


05/01/2005
----------
1. rename preference option msgdatetimestamp to msgdatetype
2. fix the problem that messages are always sorted by sent date even the