@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.51
-releasedate		20050507
+releasedate		20050508
 
 ##############################################################################
 # host dependent configuration
