@@ -16,26 +16,39 @@ if (($_=ow::tool::find_configfile('etc/suid.conf', 'etc/defaults/suid.conf')) ne
 my $has_savedsuid_support = $conf{'has_savedsuid_support'} || 'no';
 
 ########## end init ##############################################
+# turn gid string notation into numbers
+# remove duplicated numbers, and try to conver euid arg1 bug
+sub gidarray2array {
+   my (@gids, %found);
+   foreach my $gidstr (@_) {
+      foreach my $gid (split(/\s+/, $gidstr)) {
+         next if (defined $found{$gid} || $gid eq '');
+         push(@gids, $gid); $found{$gid}=1;
+      }
+   }
+   # when we use $)=@gids to set $), the $gids[1] arg will be ignored,
+   # so we repeat $gids[0] as $gids[1] in return value
+   # to conver this strange behavior, tricky!
+   return($gids[0], @gids);
+}
 
 # openwebmail drop euid root after user has been authenticated
 # this routine save root to ruid in case system doesn't support saved-euid
 # so we can give up euid root temporarily and get it back later.
 sub set_euid_egids {
    my ($euid, @egids)=@_;
+   @egids=gidarray2array(@egids);
 
-   # set RGID, 2nd parm will be ignore, so we repeat parm 1 twice, tricky!
-   $) = join(" ", $egids[0], @egids);
-   # set EGID, always set rgid=egids[0];
-   $( = $egids[0];
+   $) = join(" ",@egids);	# set EGID
+   $( = $egids[0];		# set RGID
    if ($> != $euid) {
-      # set RUID, backup euid0 here if system doesn't support savedsuid
+      # set RUID
       if ($has_savedsuid_support ne 'yes') {
          $< = 0 if ($>==0);	# keep euid0 in ruid before drop euid0
       } else {
          $< = $euid;		# switch to new euid
       }
-      # set EUID
-      $> = $euid;
+      $> = $euid;		# set EUID
    }
    return;
 }
@@ -54,7 +67,7 @@ sub set_uid_to_root {
 
 sub restore_uid_from_root {
    my ($ruid, $euid, $egid)=@_;
-   $) = $egid;
+   $) = join(" ", gidarray2array($egid));
    $< = $ruid;
    $> = $euid;
    return;
@@ -82,7 +95,7 @@ sub restore_uid_from_root {
 #
 sub drop_ruid_rgid {
    my $euid=$>;
-   my @egids=split(/\s+/,$));
+   my @egids=gidarray2array($));
    $>=0; $(=$egids[0]; $<=$euid; $>=$euid;
    return
 }
